tests/errors/operation_03/operation_03_i.imp
/* operation_03_i
* Author: 
* Creation date: 24/04/2023
*/

IMPLEMENTATION operation_03_i
REFINES operation_03
    
OPERATIONS
    boolean <-- return_true = BEGIN
        boolean := TRUE
    END
    
END